--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
-# These individuals contributed to the hbnb project in this repository 
+# These individuals contributed to the hbnb project in this repository
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
-Paulo Arteaga <78317831@holbertonstudents.com>
+Paulo Arteaga <7831@holbertonstudents.com>
+Jose Rojas <7589@holbertonstudents.com>
